@@ -1,4 +1,4 @@
-.TH PSTREE 1 2011-02-22 "Linux" "User Commands"
+.TH PSTREE 1 2012-05-20 "Linux" "User Commands"
 .SH NAME
 pstree \- display a tree of processes
 .SH SYNOPSIS
@@ -7,6 +7,7 @@ pstree \- display a tree of processes
 .RB [ \-a | \-\-arguments ]
 .RB [ \-c | \-\-compact ]
 .RB [ \-h | \-\-highlight\-all | \-H \fIpid\fB | \-\-highlight\-pid\ \fIpid\fB ]
+.RB [ \-g ] \-\-show\-pgids ]
 .RB [ \-l | \-\-long ]
 .RB [ \-n | \-\-numeric\-sort ]
 .RB [ \-p | \-\-show\-pids ]
@@ -75,6 +76,10 @@ nor any of its ancestors are in the subtree being shown.
 Like \fB\-h\fP, but highlight the specified process instead. Unlike with
 \fB\-h\fP, \fBpstree\fP fails when using \fB\-H\fP if highlighting is not
 available.
+.IP \fB\-g\fP
+Show PGIDs. Process Group IDs are shown as decimal numbers in parentheses
+after each process name. \fB\-p\fP implicitly disables compaction. If both
+PIDs and PGIDs are displayed then PIDs are shown first.
 .IP \fB\-l\fP
 Display long lines. By default, lines are truncated to the display width or
 132 if output is sent to a non-tty or if the display width is unknown.
